# synq

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  print_ast.vsh  publish.vsh  replace_keyword.sh
.github/workflows/: ci.yml  publish.yml
benches/: Cargo.toml
codec/: README.md
codec/src/synq/: bytecode.rs
crates/synq/: Cargo.toml
crates/synq-benches/: Cargo.toml
crates/synq-bin/: Cargo.toml
crates/synq-bin/src/: print_lexer.rs  synq_ast.rs
crates/synq-codec/: Cargo.toml
crates/synq-codec/src/: error.rs  lib.rs  synq.rs
crates/synq-codec/src/synq/: ast_printer.rs  compiler.rs  flow.md  lexer.rs  parser.rs  salt.rs  scanner.rs
crates/synq-core/: Cargo.toml
crates/synq-core/src/: lib.rs
crates/synq-net/: Cargo.toml
crates/synq/src/: lib.rs
examples/: basi_p2p_stream.rs
synq-core/: Cargo.toml
synq-core/src/: lib.rs
tests/: Cargo.toml
tests/files/: error_unexpected_ident.synq  frame.synq  frames.synq  message.synq  option.synq  photon.synq
tests/src/codec/: mod.rs
tests/src/codec/synq/: compilation_test.rs  frame.stdout  lexer_test.rs  mod.rs
