[package]
name = "synq-codec"
version = "0.1.1"
edition = "2024"
authors = ["m-pasta <mepasta@hey.com>"]
description = "codec module of synQ (look at the github repository https://github.com/m-epasta/synq/"
license = "MIT"
repository = "https://github.com/m-epasta/synq/crates/synq-core/"
readme = "README.md"

[dependencies]
thiserror = "2.0.18"
